crates/eml_cli/tests/snapshots/ui__run@files__file_in_handle_body.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/files/file_in_handle_body.em
---
--- stdout ---
42
--- stderr ---
