crates/eml_cli/tests/snapshots/ui__run@files__state_file.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/files/state_file.em
---
--- stdout ---
hello from a file
--- stderr ---
